Minor text refactoring

--- a/doc/tutorials/data/data_abalone.ipynb
+++ b/doc/tutorials/data/data_abalone.ipynb
@@ -39,8 +39,7 @@
    "source": [
     "## Download data\n",
     "\n",
-    "First, we will load the data into pandas DataFrame.\n",
-    "We will name the column as per their description (see Variable Table in the dataset description)."
+    "First, we will load the data into Pandas DataFrame. Each data column represents one of the features and is named accordingly, see section Variable Table in the dataset description. We will name the Pandas columns as per the variable description."
    ]
   },
   {
