--- a/doc/tutorials/data/data_telescope.ipynb
+++ b/doc/tutorials/data/data_telescope.ipynb
@@ -23,10 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f595cc77-885c-49ca-8385-b66a725fbdef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a9d25bc1733f44b1ad6a349203b5a16a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Text(value='dss_config.sqlite', description='Config. File Name', style=TextStyle(description_wi…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run ../access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
@@ -39,16 +54,38 @@
    "source": [
     "## Download data\n",
     "\n",
-    "First, we will load the data into pandas DataFrame.\n",
-    "We will name the column as per their description (see Additional Variable Information section)."
+    "First, we will load the data into Pandas DataFrame.\n",
+    "\n",
+    "First, we will load the data into Pandas DataFrame. Each data column represents one of the features and is named accordingly, see section Additional Variable Information in the dataset description. We will name the Pandas columns as per the variable description."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cab1e6a9-b640-419b-bc8e-b4379a43666d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading the data took: 4.71s\n",
+      "    fLength    fWidth   fSize   fConc  fConc1     fAsym  fM3Long  fM3Trans  \\\n",
+      "0   31.6036   11.7235  2.5185  0.5303  0.3773   26.2722  23.8238   -9.9574   \n",
+      "1  162.0520  136.0310  4.0612  0.0374  0.0187  116.7410 -64.8580  -45.2160   \n",
+      "2   23.8172    9.5728  2.3385  0.6147  0.3922   27.2107  -6.4633   -7.1513   \n",
+      "3   75.1362   30.9205  3.1611  0.3168  0.1832   -5.5277  28.5525   21.8393   \n",
+      "4   51.6240   21.1502  2.9085  0.2420  0.1340   50.8761  43.1887    9.8145   \n",
+      "\n",
+      "    fAlpha    fDist class  \n",
+      "0   6.3609  205.261     g  \n",
+      "1  76.9600  256.788     g  \n",
+      "2  10.4490  116.737     g  \n",
+      "3   4.6480  356.462     g  \n",
+      "4   3.6130  238.098     g  \n"
+     ]
+    }
+   ],
    "source": [
     "from urllib.request import urlopen\n",
     "import tempfile\n",
@@ -103,10 +140,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9726bbfb-7d4b-4dbf-97f6-2c70260c1bfc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/vagrant/data-science-sandbox/venv/lib/python3.8/site-packages/pyexasol/callback.py:81: FutureWarning: the 'line_terminator'' keyword is deprecated, use 'lineterminator' instead.\n",
+      "  return src.to_csv(wrapped_pipe, header=False, index=False, line_terminator='\\n', quoting=csv.QUOTE_NONNUMERIC, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Imported 15215 rows into TELESCOPE_TRAIN.\n",
+      "Imported 3804 rows into TELESCOPE_TEST.\n",
+      "Importing the data took: 717.22ms\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "import pyexasol\n",
@@ -143,6 +198,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3490c957-366e-425f-91ae-a645ccabbfe0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e53cbb99-8387-4165-a930-e4f24abfeaee",
    "metadata": {},
    "outputs": [],
    "source": []
