--- a/doc/tutorials/sklearn/sklearn_predict_abalone.ipynb
+++ b/doc/tutorials/sklearn/sklearn_predict_abalone.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "## Run predictions\n",
     "\n",
-    "Let's make predictions on the data we have in table `ABALONE_TEST`. This table also includes a column with ground truth labels. We will use it to assess the performance of our predictor. In the code below we will add the `ROWID` to the output columns (as required by the generic prediction UDF). This will allow us to link the result to the ground truth."
+    "Let's make predictions on the data we have in table `ABALONE_TEST`. This table also includes a column with ground truth labels. We will use it to assess the performance of our predictor. In the code below we will add the ROWID to the output columns (as required by the generic prediction UDF). This will allow us to link the result to the ground truth."
    ]
   },
   {
