--- a/doc/tutorials/sklearn/sklearn_predict_telescope.ipynb
+++ b/doc/tutorials/sklearn/sklearn_predict_telescope.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "## Run predictions\n",
     "\n",
-    "Let's classify the data we have in the TELESCOPE_TEST table. This table also includes a column with ground truth labels. We will use it to assess the performance of our classifier. In the code below we will add the ROWID to the output columns (as required by the generic prediction UDF). This will allow us to link the result to the ground truth."
+    "Let's classify the data we have in the table `TELESCOPE_TEST`. This table also includes a column with ground truth labels. We will use it to assess the performance of our classifier. In the code below we will add the ROWID to the output columns (as required by the generic prediction UDF). This will allow us to link the result to the ground truth."
    ]
   },
   {
