Addressing review comments

--- a/doc/tutorials/sagemaker/sme_deploy_model.ipynb
+++ b/doc/tutorials/sagemaker/sme_deploy_model.ipynb
@@ -109,7 +109,7 @@
     "ENDPOINT_NAME = \"APSPredictor\"\n",
     "\n",
     "# The EC2 instance type of the endpoint to deploy the Autopilot model to.\n",
-    "INSTANCE_TYPE = \"ml.m5.large\"\n",
+    "INSTANCE_TYPE = \"ml.t3.medium\"\n",
     "\n",
     "# The initial number of instances to run the endpoint on.\n",
     "INSTANCE_COUNT = 1\n",
@@ -257,7 +257,7 @@
    "source": [
     "## Delete endpoint\n",
     "\n",
-    "It is important to delete the endpoint once we finished working with it, to avoid unnecessary charges. The following script does that."
+    "<b>It is important to delete the endpoint once we finished working with it, to avoid unnecessary charges.</b> The following script does that."
    ]
   },
   {
