--- a/doc/tutorials/sagemaker/sme_init.ipynb
+++ b/doc/tutorials/sagemaker/sme_init.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "38ab2153-4a5e-49f8-b1bc-a47664f7c9db",
    "metadata": {},
    "outputs": [],
@@ -256,12 +256,12 @@
     "sql = f\"\"\"\n",
     "CREATE OR REPLACE  CONNECTION [{sb_config.AWS_CONN}]\n",
     "    TO 'https://{sb_config.AWS_BUCKET}.s3.{sb_config.AWS_REGION}.amazonaws.com/'\n",
-    "    USER {{AWS_KEY_ID!s}}\n",
-    "    IDENTIFIED BY {{AWS_ACCESS_KEY!s}}\n",
+    "    USER {{AWS_ACCESS_KEY_ID!s}}\n",
+    "    IDENTIFIED BY {{AWS_SECRET_ACCESS_KEY!s}}\n",
     "\"\"\"\n",
     "query_params = {\n",
-    "    \"AWS_KEY_ID\": sb_config.AWS_KEY_ID, \n",
-    "    \"AWS_ACCESS_KEY\": sb_config.AWS_ACCESS_KEY\n",
+    "    \"AWS_ACCESS_KEY_ID\": sb_config.AWS_ACCESS_KEY_ID, \n",
+    "    \"AWS_SECRET_ACCESS_KEY\": sb_config.AWS_SECRET_ACCESS_KEY\n",
     "}\n",
     "with pyexasol.connect(dsn=EXTERNAL_HOST, user=sb_config.USER, password=sb_config.PASSWORD, compression=True) as conn:\n",
     "    conn.execute(query=sql, query_params=query_params)"
