--- a/doc/tutorials/sagemaker/sme_init_ui.ipynb
+++ b/doc/tutorials/sagemaker/sme_init_ui.ipynb
@@ -17,33 +17,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from enum import Enum\n",
+    "    \n",
+    "class ExasolAWSConfig(Enum):\n",
+    "    # AWS access credentials\n",
+    "    key_id = 'AWS_ACCESS_KEY_ID'\n",
+    "    secret_key = 'AWS_SECRET_ACCESS_KEY'\n",
+    "    region = 'AWS_REGION'\n",
+    "    role = 'AWS_ROLE'\n",
+    "    # S3 bucket, which must exist\n",
+    "    bucket = 'AWS_BUCKET'\n",
+    "    # Name of the AWS connection to be created in the database\n",
+    "    connection = 'AWS_CONN'\n",
+    "    save_btn = 'save'\n",
+    "\n",
     "def get_sme_config_ui():\n",
     "\n",
-    "    style = {'description_width': '120px'}\n",
+    "    import ipywidgets as widgets\n",
+    "\n",
+    "    Cfg = ExasolAWSConfig\n",
+    "    style = {'description_width': '140px'}\n",
     "    inputs = {\n",
-    "        # AWS access credentials\n",
-    "        'key id':     widgets.Password(description='AWS Key ID', value=sb_config.get('AWS_KEY_ID'), style=style),\n",
-    "        'access key': widgets.Password(description='AWS Access Key', value=sb_config.get('AWS_ACCESS_KEY'), style=style),\n",
-    "        'region':     widgets.Text(description='AWS Region', value=sb_config.get('AWS_REGION'), style=style),\n",
-    "        'role':       widgets.Text(description='AWS Role', value=sb_config.get('AWS_ROLE'), style=style),\n",
-    "        # S3 bucket, which must exist\n",
-    "        'bucket':     widgets.Text(description='AWS S3 Bucket', value=sb_config.get('AWS_BUCKET'), style=style),\n",
-    "        # Name of the AWS connection to be created in the database\n",
-    "        'connection': widgets.Text(description='AWS Connection', value=sb_config.get('AWS_CONN'), style=style),\n",
-    "        'save':       widgets.Button(description='Save')\n",
+    "        Cfg.key_id:     widgets.Password(description='AWS Access Key ID', value=sb_config.get(Cfg.key_id.value), style=style),\n",
+    "        Cfg.secret_key: widgets.Password(description='AWS Secret Access Key', value=sb_config.get(Cfg.secret_key.value), style=style),\n",
+    "        Cfg.region:     widgets.Text(description='AWS Region', value=sb_config.get(Cfg.region.value), style=style),\n",
+    "        Cfg.role:       widgets.Text(description='AWS Role', value=sb_config.get(Cfg.role.value), style=style),\n",
+    "        Cfg.bucket:     widgets.Text(description='AWS S3 Bucket', value=sb_config.get(Cfg.bucket.value), style=style),\n",
+    "        Cfg.connection: widgets.Text(description='AWS Connection', value=sb_config.get(Cfg.connection.value), style=style),\n",
+    "        'save':         widgets.Button(description='Save')\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    def save_configuration(btn):\n",
-    "        sb_config.save('AWS_KEY_ID', inputs['key id'].value)\n",
-    "        sb_config.save('AWS_ACCESS_KEY', inputs['access key'].value)\n",
-    "        sb_config.save('AWS_REGION', inputs['region'].value)\n",
-    "        sb_config.save('AWS_ROLE', inputs['role'].value)\n",
-    "        sb_config.save('AWS_BUCKET', inputs['bucket'].value)\n",
-    "        sb_config.save('AWS_CONN', inputs['connection'].value)\n",
-    "        \n",
+    "        for key in Cfg:\n",
+    "            sb_config.save(key.value, inputs[key].value)\n",
+    "\n",
     "    inputs['save'].on_click(save_configuration)\n",
-    "    \n",
-    "    ui = widgets.VBox(list(inputs.values()), width='1000px')\n",
+    "\n",
+    "    ui = widgets.VBox(list(inputs.values()))\n",
     "    return ui"
    ]
   }
