--- a/doc/tutorials/sagemaker/sme_train_model.ipynb
+++ b/doc/tutorials/sagemaker/sme_train_model.ipynb
@@ -316,8 +316,8 @@
     "from sagemaker import AutoML\n",
     "\n",
     "os.environ[\"AWS_DEFAULT_REGION\"] = sb_config.AWS_REGION\n",
-    "os.environ[\"AWS_ACCESS_KEY_ID\"] = sb_config.AWS_KEY_ID\n",
-    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = sb_config.AWS_ACCESS_KEY\n",
+    "os.environ[\"AWS_ACCESS_KEY_ID\"] = sb_config.AWS_ACCESS_KEY_ID\n",
+    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = sb_config.AWS_SECRET_ACCESS_KEY\n",
     "\n",
     "automl = AutoML.attach(auto_ml_job_name=sb_config.JOB_NAME)\n",
     "automl.describe_auto_ml_job()"
