Improved config ui

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sandbox_config.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sandbox_config.ipynb
@@ -65,14 +65,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyexasol\n",
+    "from exasol.connections import open_pyexasol_connection\n",
     "from stopwatch import Stopwatch\n",
     "\n",
     "stopwatch = Stopwatch()\n",
     "\n",
-    "dsn = f'{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}'\n",
     "sql = f'CREATE SCHEMA IF NOT EXISTS \"{sb_config.SCHEMA}\"'\n",
-    "with pyexasol.connect(dsn=dsn, user=sb_config.USER, password=sb_config.PASSWORD, compression=True) as conn:\n",
+    "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
     "    conn.execute(query=sql)\n",
     "\n",
     "print(f\"Schema created in {stopwatch}\")"
@@ -81,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d56197a-7796-4e07-b94e-3aaaaefd789e",
+   "id": "d18f4f90-3b87-4f69-8e67-6c2e9e37085e",
    "metadata": {},
    "outputs": [],
    "source": []
