--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sandbox_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sandbox_config_ui.ipynb
@@ -12,6 +12,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7a6d7ece-c488-4e65-8c52-afee480207a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run ./sandbox_ui_styles.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "84648ba3-6622-406c-a58c-7725aa4965aa",
    "metadata": {},
@@ -21,52 +31,80 @@
     "    \n",
     "class ExasolConfig(Enum):\n",
     "    db_name = 'EXTERNAL_HOST_NAME'\n",
-    "    db_port = 'HOST_PORT'\n",
+    "    db_port = 'DB_PORT'\n",
     "    db_schema = 'SCHEMA'\n",
     "    db_user = 'USER'\n",
     "    db_password = 'PASSWORD'\n",
+    "    encryption = 'ENCRYPTION'\n",
+    "    cert_vld = 'CERTIFICATE_VALIDATION'\n",
+    "    trusted_ca = 'TRUSTED_CA'\n",
+    "    client_cert = 'CLIENT_CERTIFICATE'\n",
+    "    client_key = 'PRIVATE_KEY'\n",
     "    bfs_port = 'BUCKETFS_PORT'\n",
     "    bfs_service = 'BUCKETFS_SERVICE'\n",
     "    bfs_bucket = 'BUCKETFS_BUCKET'\n",
     "    bfs_user = 'BUCKETFS_USER'\n",
     "    bfs_password = 'BUCKETFS_PASSWORD'\n",
-    "    bfs_protocol = 'BUCKETFS_USE_HTTPS'\n",
     "\n",
     "def get_sandbox_config_ui():\n",
     "\n",
+    "    from itertools import chain\n",
     "    import ipywidgets as widgets\n",
     "\n",
-    "    Cfg = ExasolConfig\n",
-    "    style = {'description_width': '140px'}\n",
-    "    inputs = {\n",
-    "        Cfg.db_name:      widgets.Text(description='DB Host Name', value=sb_config.get(Cfg.db_name.value, '127.0.0.1'), style=style),\n",
-    "        Cfg.db_port:      widgets.IntText(description='DB Host Port', value=int(sb_config.get(Cfg.db_port.value, '8888')), style=style),\n",
-    "        Cfg.db_schema:    widgets.Text(description='DB Schema', value=sb_config.get(Cfg.db_schema.value, 'IDA'), style=style),\n",
-    "        Cfg.db_user:      widgets.Text(description='DB User', value=sb_config.get(Cfg.db_user.value), style=style),\n",
-    "        Cfg.db_password:  widgets.Password(description='DB Password', value=sb_config.get(Cfg.db_password.value), style=style),\n",
-    "        Cfg.bfs_port:     widgets.IntText(description='BucketFS Port', value=int(sb_config.get(Cfg.bfs_port.value, '6666')),\n",
-    "                                          style=style),\n",
-    "        Cfg.bfs_service:  widgets.Text(description='BucketFS Service Name', value=sb_config.get(Cfg.bfs_service.value, 'bfsdefault'),\n",
-    "                                       style=style),\n",
-    "        Cfg.bfs_bucket:   widgets.Text(description='BucketFS Bucket', value=sb_config.get(Cfg.bfs_bucket.value, 'default'), style=style),\n",
-    "        Cfg.bfs_user:     widgets.Text(description='BucketFS User', value=sb_config.get(Cfg.bfs_user.value), style=style),\n",
-    "        Cfg.bfs_password: widgets.Password(description='BucketFS Password', value=sb_config.get(Cfg.bfs_password.value), style=style),\n",
-    "        Cfg.bfs_protocol: widgets.RadioButtons(description='BucketFS Protocol', options=['http', 'https'],\n",
-    "                                               value='https' if sb_config.get(Cfg.bfs_protocol.value, 'False')=='True' else 'http',\n",
-    "                                               style=style),\n",
-    "        'save':           widgets.Button(description='Save')\n",
-    "    }\n",
-    "    \n",
-    "    def save_configuration(btn):\n",
-    "        for key in Cfg:\n",
-    "            if key == Cfg.bfs_protocol:\n",
-    "                sb_config.save(key.value, str(inputs[key].value == 'https'))\n",
-    "            else:\n",
-    "                sb_config.save(key.value, inputs[key].value)\n",
+    "    ui_look = get_config_styles()\n",
     "\n",
-    "    inputs['save'].on_click(save_configuration)\n",
-    "    \n",
-    "    ui = widgets.VBox(list(inputs.values()))\n",
+    "    Cfg = ExasolConfig\n",
+    "    inputs = [\n",
+    "        [\n",
+    "            ('Host Name', widgets.Text(value=sb_config.get(Cfg.db_name.value, '127.0.0.1')), Cfg.db_name),\n",
+    "            ('Port', widgets.IntText(value=int(sb_config.get(Cfg.db_port.value, '8888'))), Cfg.db_port),\n",
+    "            ('User Name', widgets.Text(value=sb_config.get(Cfg.db_user.value)), Cfg.db_user),\n",
+    "            ('Password', widgets.Password(value=sb_config.get(Cfg.db_password.value)), Cfg.db_password),\n",
+    "            ('Default Schema', widgets.Text(value=sb_config.get(Cfg.db_schema.value, 'IDA')), Cfg.db_schema)\n",
+    "        ],\n",
+    "        [\n",
+    "            ('Port', widgets.IntText(value=int(sb_config.get(Cfg.bfs_port.value, '6666'))), Cfg.bfs_port),\n",
+    "            ('User Name', widgets.Text(value=sb_config.get(Cfg.bfs_user.value)), Cfg.bfs_user),\n",
+    "            ('Password', widgets.Password(value=sb_config.get(Cfg.bfs_password.value)), Cfg.bfs_password),\n",
+    "            ('Service Name', widgets.Text(value=sb_config.get(Cfg.bfs_service.value, 'bfsdefault')), Cfg.bfs_service),\n",
+    "            ('Bucket Name', widgets.Text(value=sb_config.get(Cfg.bfs_bucket.value, 'default')), Cfg.bfs_bucket)\n",
+    "        ],\n",
+    "        [\n",
+    "            ('Use Encryption', widgets.Checkbox(value=sb_config.get(Cfg.encryption.value, 'True') == 'True', indent=False),\n",
+    "                Cfg.encryption),\n",
+    "            ('Validate Certificate', widgets.Checkbox(value=sb_config.get(Cfg.cert_vld.value, 'True') == 'True', indent=False),\n",
+    "                Cfg.cert_vld),\n",
+    "            ('Trusted CA File/Dir', widgets.Text(value=sb_config.get(Cfg.trusted_ca.value)), Cfg.trusted_ca),\n",
+    "            ('Certificate File', widgets.Text(value=sb_config.get(Cfg.client_cert.value)), Cfg.client_cert),\n",
+    "            ('Private Key File', widgets.Text(value=sb_config.get(Cfg.client_key.value)), Cfg.client_key)\n",
+    "        ]\n",
+    "    ]\n",
+    "\n",
+    "    group_names = ['Database Connection', 'BucketFS Connection', 'TLS/SSL Configuration']\n",
+    "    save_btn = widgets.Button(description='Save', style=ui_look.button_style, layout=ui_look.button_layout)\n",
+    "\n",
+    "    def save_configuration(btn):\n",
+    "        for row in chain(*inputs):\n",
+    "            _, widget, key = row\n",
+    "            sb_config.save(key.value, str(widget.value))\n",
+    "        save_btn.icon = 'check'\n",
+    "\n",
+    "    save_btn.on_click(save_configuration)\n",
+    "\n",
+    "    # Apply the styles and layouts\n",
+    "    for row in chain(*inputs):\n",
+    "        widget = row[1]\n",
+    "        widget.style = ui_look.input_style\n",
+    "        widget.layout = ui_look.input_layout\n",
+    "    item_groups = [[widgets.Box([widgets.Label(value=row[0], style=ui_look.label_style, layout=ui_look.label_layout), \n",
+    "                                 row[1]], layout=ui_look.row_layout) \n",
+    "                    for row in input_group] \n",
+    "                   for input_group in inputs]\n",
+    "    items = [widgets.Box([widgets.Label(value=group_name, style=ui_look.header_style, layout=ui_look.header_layout)] + item_group, \n",
+    "                         layout=ui_look.group_layout)\n",
+    "             for item_group, group_name in zip(item_groups, group_names)]\n",
+    "    items.append(save_btn)\n",
+    "    ui = widgets.Box(items, layout=ui_look.outer_layout)\n",
     "    return ui"
    ]
   },
