Addressed review comments

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/access_store_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/access_store_ui.ipynb
@@ -12,22 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "74f55112-92dc-4a54-ac1a-b068fadfbcc7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "def upward_file_search(file_name: str) -> str:\n",
-    "\n",
-    "    dir = Path().resolve()\n",
-    "    while dir.name:\n",
-    "        maybe_file = dir / file_name\n",
-    "        if maybe_file.is_file():\n",
-    "            return str(maybe_file)\n",
-    "        dir = dir.parent\n",
-    "    raise ValueError(f'Cannot find {file_name}')\n",
+    "from exasol.utils import upward_file_search\n",
     "\n",
     "# This NB may be running from various locations in the NB hierarchy.\n",
     "# Need to search for the styles NB from the current directory upwards.\n",
