--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_abalone.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_abalone.ipynb
@@ -52,14 +52,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyexasol\n",
+    "from exasol.connections import open_pyexasol_connection\n",
     "from sklearn.model_selection import train_test_split\n",
     "from stopwatch import Stopwatch\n",
     "\n",
     "stopwatch = Stopwatch()\n",
     "\n",
-    "dsn = f'{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}'\n",
-    "with pyexasol.connect(dsn=dsn, user=sb_config.USER, password=sb_config.PASSWORD, compression=True) as conn:\n",
+    "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
     "    df = conn.export_to_pandas(query_or_table=(sb_config.SCHEMA, 'ABALONE_TRAIN'))\n",
     "\n",
     "X, y = df.drop(columns='RINGS'), df['RINGS']\n",
@@ -199,20 +198,14 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "from exasol.bucketfs import Service\n",
+    "from exasol.connections import open_bucketfs_connection\n",
     "\n",
     "MODEL_FILE = 'abalone_svm_model.pkl'\n",
     "\n",
-    "# Setup the connection parameters.\n",
-    "buckfs_url_prefix = 'https' if sb_config.BUCKETFS_USE_HTTPS == 'True' else 'http'\n",
-    "buckfs_url = f'{buckfs_url_prefix}://{sb_config.EXTERNAL_HOST_NAME}:{sb_config.BUCKETFS_PORT}'\n",
-    "buckfs_credentials = {sb_config.BUCKETFS_BUCKET: {'username': sb_config.BUCKETFS_USER, 'password': sb_config.BUCKETFS_PASSWORD}}\n",
-    "\n",
     "stopwatch = Stopwatch()\n",
     "\n",
-    "# Connect to the BucketFS service and navigate to the bucket of choice.\n",
-    "bucketfs = Service(buckfs_url, buckfs_credentials)\n",
-    "bucket = bucketfs[sb_config.BUCKETFS_BUCKET]\n",
+    "# Connect to the BucketFS service\n",
+    "bucket = open_bucketfs_connection(sb_config)\n",
     "\n",
     "# Serialize the model into a byte-array and upload it to the BucketFS, \n",
     "# where it will be saved in the file with the specified name.\n",
