--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_telescope.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_telescope.ipynb
@@ -52,13 +52,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyexasol\n",
+    "from exasol.connections import open_pyexasol_connection\n",
     "from stopwatch import Stopwatch\n",
     "\n",
     "stopwatch = Stopwatch()\n",
     "\n",
-    "dsn = f'{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}'\n",
-    "with pyexasol.connect(dsn=dsn, user=sb_config.USER, password=sb_config.PASSWORD, compression=True) as conn:\n",
+    "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
     "    df = conn.export_to_pandas(query_or_table=(sb_config.SCHEMA, 'TELESCOPE_TRAIN'))\n",
     "\n",
     "print(f\"Loading the data took: {stopwatch}\")"
@@ -145,20 +144,14 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "from exasol.bucketfs import Service\n",
+    "from exasol.connections import open_bucketfs_connection\n",
     "\n",
     "MODEL_FILE = 'telescope_tree_model.pkl'\n",
     "\n",
-    "# Setup the connection parameters.\n",
-    "buckfs_url_prefix = 'https' if sb_config.BUCKETFS_USE_HTTPS == 'True' else 'http'\n",
-    "buckfs_url = f'{buckfs_url_prefix}://{sb_config.EXTERNAL_HOST_NAME}:{sb_config.BUCKETFS_PORT}'\n",
-    "buckfs_credentials = {sb_config.BUCKETFS_BUCKET: {'username': sb_config.BUCKETFS_USER, 'password': sb_config.BUCKETFS_PASSWORD}}\n",
-    "\n",
     "stopwatch = Stopwatch()\n",
     "\n",
-    "# Connect to the BucketFS service and navigate to the bucket of choice.\n",
-    "bucketfs = Service(buckfs_url, buckfs_credentials)\n",
-    "bucket = bucketfs[sb_config.BUCKETFS_BUCKET]\n",
+    "# Connect to the BucketFS service\n",
+    "bucket = open_bucketfs_connection(sb_config)\n",
     "\n",
     "# Serialize the model into a byte-array and upload it to the BucketFS, \n",
     "# where it will be saved in the file with the specified name.\n",
@@ -174,24 +167,6 @@
    "source": [
     "Now we are ready to use this model in our SQL queries. This will be demonstrated in the [following notebook](sklearn_predict_telescope.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0301211d-8520-4f66-8727-114f3292bcd6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "buckfs_url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec99ed24-d6ce-46bf-97f3-9d0b1c38aade",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
