--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_abalone.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_abalone.ipynb
@@ -106,7 +106,7 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "import pyexasol\n",
+    "from exasol.connections import open_pyexasol_connection\n",
     "\n",
     "# Split the data into train and test sets\n",
     "df_train, df_test = train_test_split(df, test_size=0.2)\n",
@@ -114,13 +114,11 @@
     "train_table = 'ABALONE_TRAIN'\n",
     "test_table = 'ABALONE_TEST'\n",
     "column_desc = [' '.join(c) for c in column_def]\n",
-    "dsn = f'{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}'\n",
     "\n",
     "stopwatch = Stopwatch()\n",
     "\n",
     "# Create an Exasol connection\n",
-    "dsn = f'{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}'\n",
-    "with pyexasol.connect(dsn=dsn, user=sb_config.USER, password=sb_config.PASSWORD, compression=True) as conn:\n",
+    "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
     "\n",
     "    # Create tables\n",
     "    sql = f'CREATE OR REPLACE TABLE \"{sb_config.SCHEMA}\".\"{train_table}\"({\", \".join(column_desc)})'\n",
