--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_telescope.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_telescope.ipynb
@@ -110,7 +110,7 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "import pyexasol\n",
+    "from exasol.connections import open_pyexasol_connection\n",
     "\n",
     "# Split the data into train and test sets\n",
     "df_train, df_test = train_test_split(df, test_size=0.2)\n",
@@ -122,8 +122,7 @@
     "stopwatch = Stopwatch()\n",
     "\n",
     "# Create an Exasol connection\n",
-    "dsn = f'{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}'\n",
-    "with pyexasol.connect(dsn=dsn, user=sb_config.USER, password=sb_config.PASSWORD, compression=True) as conn:\n",
+    "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
     "\n",
     "    # Create tables\n",
     "    sql = f'CREATE OR REPLACE TABLE \"{sb_config.SCHEMA}\".\"{train_table}\"({\", \".join(column_desc)})'\n",
@@ -143,15 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3490c957-366e-425f-91ae-a645ccabbfe0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e53cbb99-8387-4165-a930-e4f24abfeaee",
+   "id": "6645e76c-6a6e-48f3-a668-c1fd8717d7f2",
    "metadata": {},
    "outputs": [],
    "source": []
