--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_predict_udf.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_predict_udf.ipynb
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "import textwrap\n",
-    "import pyexasol\n",
+    "from exasol.connections import open_pyexasol_connection\n",
     "from stopwatch import Stopwatch\n",
     "\n",
     "stopwatch = Stopwatch()\n",
@@ -104,8 +104,7 @@
     "/\n",
     "\"\"\")\n",
     "\n",
-    "dsn = f'{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}'\n",
-    "with pyexasol.connect(dsn=dsn, user=sb_config.USER, password=sb_config.PASSWORD, compression=True) as conn:\n",
+    "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
     "    conn.execute(query=sql, query_params={'schema': sb_config.SCHEMA})\n",
     "\n",
     "print(f\"Creating prediction script took: {stopwatch}\")"
