Improved config ui (#82)
* Improved config ui

* Addressed review comments

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/access_store_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/access_store_ui.ipynb
@@ -12,6 +12,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "74f55112-92dc-4a54-ac1a-b068fadfbcc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from exasol.utils import upward_file_search\n",
+    "\n",
+    "# This NB may be running from various locations in the NB hierarchy.\n",
+    "# Need to search for the styles NB from the current directory upwards.\n",
+    "\n",
+    "%run {upward_file_search('sandbox_ui_styles.ipynb')}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "e542d21f-e082-494a-b00a-661abcc5bd12",
    "metadata": {},
@@ -19,24 +34,11 @@
    "source": [
     "def get_access_store_ui(root_dir: str = '.'):\n",
     "    \n",
-    "    from pathlib import Path\n",
     "    from enum import Enum\n",
     "    import ipywidgets as widgets\n",
-    "    from exasol.secret_store import Secrets as Secrets_\n",
+    "    from IPython.display import Javascript, display, clear_output\n",
+    "    from exasol.secret_store import Secrets\n",
     "    \n",
-    "    # A fix for the secret store to make its interface more in line with the dict.\n",
-    "    class Secrets(Secrets_):\n",
-    "        \n",
-    "        def get(self, key: str, default_value: str=None) -> str:\n",
-    "            value = super().get(key)\n",
-    "            return default_value if value is None else value\n",
-    "\n",
-    "        def __getattr__(self, key):\n",
-    "            value = self.get(key)\n",
-    "            if value is None:\n",
-    "                raise AttributeError(f'{key} value is not defined')\n",
-    "            return value\n",
-    "\n",
     "    # Try to find the file name in the shared store.\n",
     "    # Create a global variable only temporarily.\n",
     "    %store -r\n",
@@ -47,25 +49,48 @@
     "    else:\n",
     "        sb_store_file_ = 'dss_config.sqlite'\n",
     "\n",
-    "    WKey = Enum('WKey', ['file', 'password', 'ok'])\n",
-    "    style = {'description_width': '140px'}\n",
-    "    inputs = {\n",
-    "        WKey.file:     widgets.Text(description='Config. File Name', value=sb_store_file_, style=style),\n",
-    "        WKey.password: widgets.Password(description='Config. Password', style=style),\n",
-    "        WKey.ok:       widgets.Button(description='OK')\n",
-    "    }\n",
+    "    ui_look = get_config_styles()\n",
+    "\n",
+    "    header_lbl = widgets.Label(value='Configuration Store', style=ui_look.header_style, layout=ui_look.header_layout)\n",
+    "    file_lbl = widgets.Label(value='File Path', style=ui_look.label_style, layout=ui_look.label_layout)\n",
+    "    password_lbl = widgets.Label(value='Password', style=ui_look.label_style, layout=ui_look.label_layout)\n",
+    "    file_txt = widgets.Text(value=sb_store_file_, style=ui_look.input_style, layout=ui_look.input_layout)\n",
+    "    password_txt = widgets.Password(style=ui_look.input_style, layout=ui_look.input_layout)\n",
+    "    open_btn = widgets.Button(description='Open', style=ui_look.button_style, layout=ui_look.button_layout)\n",
+    "\n",
+    "    # Prepare to display an error message\n",
+    "    notify_output = widgets.Output()\n",
+    "    display(notify_output)\n",
+    "\n",
+    "    @notify_output.capture()\n",
+    "    def popup_message(message):\n",
+    "        clear_output()\n",
+    "        display(Javascript(f\"alert('{message}')\"))\n",
     "\n",
     "    def open_or_create_config_store(btn):\n",
     "        global sb_config, sb_store_file\n",
-    "        sb_store_file = inputs[WKey.file].value\n",
-    "        sb_config = Secrets(Path(root_dir) / sb_store_file, inputs[WKey.password].value)\n",
-    "        # Save the file in the shared store.\n",
-    "        %store sb_store_file\n",
-    "        del sb_store_file\n",
+    "        sb_store_file = file_txt.value\n",
+    "        try:\n",
+    "            sb_config = Secrets(Path(root_dir) / sb_store_file, password_txt.value)\n",
+    "            sb_config.connection()\n",
+    "        except:\n",
+    "            popup_message('Failed to open the store. Please check that the password is correct')\n",
+    "        else:\n",
+    "            open_btn.icon = 'check'\n",
+    "        finally:\n",
+    "            # Save the file in the shared store.\n",
+    "            %store sb_store_file\n",
+    "            del sb_store_file\n",
     "    \n",
-    "    inputs[WKey.ok].on_click(open_or_create_config_store)\n",
+    "    open_btn.on_click(open_or_create_config_store)\n",
     "\n",
-    "    ui = widgets.VBox(list(inputs.values()))\n",
+    "    group_items = [\n",
+    "        header_lbl,\n",
+    "        widgets.Box([file_lbl, file_txt], layout=ui_look.row_layout),\n",
+    "        widgets.Box([password_lbl, password_txt], layout=ui_look.row_layout)\n",
+    "    ]\n",
+    "    items = [widgets.Box(group_items, layout=ui_look.group_layout), open_btn]\n",
+    "    ui = widgets.Box(items, layout=ui_look.outer_layout)\n",
     "    return ui"
    ]
   }
